--- a/config.toml
+++ b/config.toml
@@ -53,7 +53,7 @@ skills = ["Chinese"]
 
 [[params.professional_skills]]
 category = "Programming Languages"
-skills = ["Golang", "Python", "CSharp", "JavaScript", "SQL", "HTML", "CSS"]
+skills = ["Golang", "Python", "csharp", "JavaScript", "SQL", "HTML", "CSS"]
 
 [[params.professional_skills]]
 category = "Frameworks"
