--- a/config.toml
+++ b/config.toml
@@ -32,32 +32,40 @@ date = "2024.10 - 2024.12"
 title = "Software Developer Intern - Tomorrows AI"
 description = "Developed a Flask-based web application for a media platform, enhancing user experience with efficient keyword and title search functionalities. Designed and implemented dynamic detail pages to display article titles, images, and content, improving interactivity and engagement. Contributed to the backend development of a scalable web application, adhering to clean code practices and optimizing performance."
 skills = ["Python", "Flask", "JavaScript", "HTML", "CSS", "OpenAI API"]
+logo = "/icons/tomorrows_ai.jpg"
+url = "https://www.tomorrowsai.org/"
 
 [[params.experience]]
 date = "2023.9 - Now"
 title = "Start Pursuing Master Degree"
 description = "Relocated to Shanghai, China from Japan to pursue a Master's degree in Software Engineering at East China Normal University."
 skills = ["Software Engineering"]
+logo = "/icons/ecnu.jpg"
+url = "https://english.ecnu.edu.cn/"
 
 [[params.experience]]
 date = "2021.4 - 2023.6"
 title = "Software Engineer - Pixel Software 株式会社"
 description = "Developed an industrial monitoring system using Golang and Python, replacing legacy VB and C systems to improve maintainability and scalability. Optimized Goroutines to increase data processing efficiency by over 40% and implemented a TCP/IP-based socket gateway for real-time data flow management. Created control software in C# for data operations in Windows environments. Collaborated with a 7-member team to design and plan software specifications and executed test plans to ensure functionality, performance, and security."
-skills = ["Golang", "Python", "C#", "DotNet", "SQL", "MySQL", "Microsoft Access", "TCP/IP"]
+skills = ["Golang", "Python", "C#", ".NET", "SQL", "MySQL", "Microsoft Access", "TCP/IP"]
+logo = "/icons/pixelsoft.jpg"
+url = "http://www.pixelsoft.co.jp/pc/index.html"
 
 [[params.experience]]
 date = "2019.9 - 2021.6"
 title = "Graduated Bachelor Degree"
 description = "Graduated with a Bachelor's degree in Teaching Chinese to Speakers of Other Languages from the School of Education."
 skills = ["Chinese"]
+logo = "/icons/sisu.jpg"
+url = "https://en.shisu.edu.cn/"
 
 [[params.professional_skills]]
 category = "Programming Languages"
-skills = ["Golang", "Python", "Csharp", "JavaScript", "SQL", "HTML", "CSS"]
+skills = ["Golang", "Python", "C#", "JavaScript", "SQL", "HTML", "CSS"]
 
 [[params.professional_skills]]
 category = "Frameworks"
-skills = ["Dotnet"]
+skills = [".NET"]
 
 [[params.professional_skills]]
 category = "Web Development"
