--- a/config.toml
+++ b/config.toml
@@ -61,7 +61,7 @@ url = "https://en.shisu.edu.cn/"
 
 [[params.professional_skills]]
 category = "Programming Languages"
-skills = ["Golang", "Python", "C#", "JavaScript", "SQL", "HTML", "CSS"]
+skills = ["Golang", "Python", "csharp", "JavaScript", "SQL", "HTML", "CSS"]
 
 [[params.professional_skills]]
 category = "Frameworks"
